--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["rlib"]
 rand = { version = "0.8" }
 fnv = { version = "1.0" }
 itertools = { version = "0.10" }
-lru = { version = "0.7" }
+lru = { version = "0.7.1" }
 getrandom = { version = "0.2", features = ["js"] }
 log = { version = "0.4", features = ["std"] }
 csv = { version = "1.1" }
@@ -22,3 +22,4 @@ pyo3 = { version = "0.15", features = ["extension-module"], optional = true }
 rayon = { version = "1.5", optional = true }
 serde = { version = "1.0", features = [ "derive", "rc" ] }
 serde_json = { version = "1.0" }
+statrs = { version = "0.15 "}
