--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -15,9 +15,9 @@
 		"start:webapp": "yarn start"
 	},
 	"dependencies": {
-		"@data-wrangling-components/core": "^1.0.0",
-		"@data-wrangling-components/react": "^1.0.1",
-		"@data-wrangling-components/utilities": "^1.1.0",
+		"@data-wrangling-components/core": "1.0.1",
+		"@data-wrangling-components/react": "^1.1.0",
+		"@data-wrangling-components/utilities": "^1.1.1",
 		"@fluentui/font-icons-mdl2": "^8.1.17",
 		"@fluentui/react": "8.42.5",
 		"@fluentui/react-hooks": "8.3.6",
