prepara containers for ui tooltips

--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -30,8 +30,10 @@
 		"arquero": "^4.8.7",
 		"chart.js": "^3.6.0",
 		"chartjs-plugin-datalabels": "^2.0.0",
+		"dompurify": "^2.3.5",
 		"formik": "^2.2.9",
 		"lodash": "^4.17.21",
+		"marked": "^4.0.12",
 		"papaparse": "^5.3.1",
 		"react": "^17.0.2",
 		"react-chartjs-2": "^4.0.0",
@@ -47,7 +49,9 @@
 	"devDependencies": {
 		"@essex/scripts": "^18.2.0",
 		"@essex/vite-config": "^18.0.1",
+		"@types/dompurify": "^2",
 		"@types/lodash": "^4.14.177",
+		"@types/marked": "^4",
 		"@types/node": "^14.17.34",
 		"@types/papaparse": "^5.3.1",
 		"@types/react": "^17.0.36",
