Implement Multi-table data-wrangling component
- Upgrade external dependencies including DWC packages
- Add Drag and Drop file uploader and context
- Prevent invavlid files from being uploaded
- Display file upload error messages
- Update global CSS reset to include box-sizing: border-box
- Implement PrepareDataFull DWC component
  - Temporarily remove table header command bar
    as the DWC PrepareDataFull component does not support this (bug)
  - Need to resolve bug in DWC and reimplement command bar in SDS
- Set sensitive data based on the currently selected table on the
  prepare page on page navigation (to synthesis or otherwise)
  - Currently the synthesis page may briefly present previously
    calculated datasets while the app recalculates the sensitive set
    this needs to be fixed.
- Add global state for managing intermediate preparation tables, steps and files
- Implement hash function to hash contents of files to use as table IDs for DWC.
  - Not currently used due to a bug in DWC where table IDs are being used as table names.
  - Fix bug in DWC and then utilize for table ID values.
- Fix fluent icon initialization bug. Note, browser console may indicate that some icons
  are being initialized multiple times. This is a bug in fluent that needs to be resolved there.
- Add typing support for styled-component fluent ui theme.

--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -15,17 +15,18 @@
 		"start:webapp": "yarn start"
 	},
 	"dependencies": {
-		"@data-wrangling-components/core": "^1.4.0",
-		"@data-wrangling-components/react": "^1.7.1",
-		"@data-wrangling-components/utilities": "^1.4.0",
-		"@fluentui/font-icons-mdl2": "^8.2.4",
-		"@fluentui/react": "^8.60.3",
-		"@fluentui/react-hooks": "^8.5.2",
-		"@fluentui/utilities": "^8.8.0",
+		"@data-wrangling-components/core": "^5.2.0",
+		"@data-wrangling-components/react": "^4.0.0",
+		"@data-wrangling-components/utilities": "^1.7.1",
+		"@fluentui/font-icons-mdl2": "^8.2.5",
+		"@fluentui/react": "^8.62.1",
+		"@fluentui/react-hooks": "^8.5.3",
+		"@fluentui/utilities": "^8.8.1",
 		"@thematic/core": "^2.0.6",
 		"@thematic/d3": "^2.0.6",
 		"@thematic/fluent": "^3.0.6",
 		"@thematic/react": "^2.0.6",
+		"@types/mime": "^2.0.3",
 		"@uifabric/icons": "7.6.2",
 		"arquero": "^4.8.8",
 		"chart.js": "^3.7.1",
@@ -34,10 +35,12 @@
 		"formik": "^2.2.9",
 		"lodash": "^4.17.21",
 		"marked": "^4.0.12",
+		"mime": "^3.0.0",
 		"papaparse": "^5.3.1",
 		"react": "^17.0.2",
 		"react-chartjs-2": "^4.0.1",
 		"react-dom": "^17.0.2",
+		"react-dropzone": "^12.0.4",
 		"react-is": "17.0.2",
 		"react-router-dom": "^6.2.2",
 		"recoil": "^0.6.1",
