--- a/.gitignore
+++ b/.gitignore
@@ -26,14 +26,8 @@ deploy.zip
 # Sample / typical outputs
 german_credit_showcase/
 credit_config.json
-*data*/
-!DataTransform/
-!DataShowcasePage/
-!DataBinning/
-!data_block/
-!dataShowcaseContext/
-!dataSynthesis/
-*output*/
+packages/lib-python/**/*data*/
+packages/lib-python/**/*output*/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
