--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -15,9 +15,11 @@
 		"start:webapp": "yarn start"
 	},
 	"dependencies": {
-		"@data-wrangling-components/core": "^5.2.0",
-		"@data-wrangling-components/react": "^4.0.0",
-		"@data-wrangling-components/utilities": "^1.7.1",
+		"@data-wrangling-components/core": "^6.1.0",
+		"@data-wrangling-components/react": "^5.1.3",
+		"@data-wrangling-components/utilities": "^1.8.2",
+		"@essex/arquero": "^2.0.1",
+		"@essex/arquero-react": "^1.0.4",
 		"@fluentui/font-icons-mdl2": "^8.2.5",
 		"@fluentui/react": "^8.62.1",
 		"@fluentui/react-hooks": "^8.5.3",
