--- a/package.json
+++ b/package.json
@@ -17,26 +17,21 @@
 	},
 	"prettier": "@essex/prettier-config",
 	"devDependencies": {
-		"@babel/core": "^7.17.0",
-		"@babel/preset-env": "^7.16.11",
-		"@babel/preset-react": "^7.16.7",
-		"@babel/preset-typescript": "^7.16.7",
-		"@essex/eslint-config": "^20.3.1",
-		"@essex/eslint-plugin": "^20.3.2",
-		"@essex/jest-config": "^21.0.8",
+		"@essex/eslint-config": "^20.3.4",
+		"@essex/eslint-plugin": "^20.3.5",
+		"@essex/jest-config": "^21.0.10",
 		"@essex/prettier-config": "^18.0.2",
-		"@essex/scripts": "^20.5.2",
-		"@types/eslint": "^8.4.1",
-		"@types/prettier": "^2.4.3",
-		"@typescript-eslint/eslint-plugin": "^5.15.0",
-		"@typescript-eslint/parser": "^5.15.0",
-		"eslint": "^8.11.0",
+		"@essex/scripts": "^22.0.1",
+		"@types/eslint": "^8.4.2",
+		"@types/prettier": "^2.6.0",
+		"@typescript-eslint/eslint-plugin": "^5.22.0",
+		"@typescript-eslint/parser": "^5.22.0",
+		"eslint": "^8.14.0",
 		"eslint-import-resolver-node": "^0.3.6",
 		"husky": "^7.0.4",
-		"jest": "^27.4.7",
-		"lint-staged": "^12.3.3",
-		"prettier": "^2.5.1",
-		"typescript": "4.4.3"
+		"lint-staged": "^12.4.1",
+		"prettier": "^2.6.2",
+		"typescript": "^4.6.4"
 	},
 	"workspaces": [
 		"packages/webapp",
