--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -33,6 +33,7 @@
 		"arquero": "^4.8.8",
 		"chart.js": "^3.7.1",
 		"chartjs-plugin-datalabels": "^2.0.0",
+		"comlink": "^4.3.1",
 		"dompurify": "^2.3.6",
 		"formik": "^2.2.9",
 		"lodash": "^4.17.21",
