store map on SdsManager to handle multiple  synthesis in parallel

--- a/packages/webapp/tsconfig.json
+++ b/packages/webapp/tsconfig.json
@@ -30,7 +30,8 @@
 		"skipLibCheck": true,
 		"noImplicitAny": false,
 		"typeRoots": ["./node_modules/@types/", "./types"],
-		"noErrorTruncation": true
+		"noErrorTruncation": true,
+		"downlevelIteration": true
 	},
 	"include": ["src/**/*"],
 	"exclude": ["**/__tests__/**"]
