--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
 	"license": "MIT",
 	"scripts": {
 		"postinstall": "husky install",
-		"clean:": "yarn workspaces foreach -pv run clean",
-		"build:": "yarn workspaces foreach -ivt run build",
-		"start:": "yarn workspaces foreach -piv run start",
+		"clean": "yarn workspaces foreach -pv run clean",
+		"build": "yarn workspaces foreach -ivt run build",
+		"start": "yarn workspaces foreach -piv run start",
 		"lint:check": "eslint \"./packages/*/src/**/*.{js,jsx,ts,tsx}\"",
 		"lint": "eslint --fix \"./packages/*/src/**/*.{js,jsx,ts,tsx}\"",
 		"format:check": "prettier --check \"./packages/*/src/**/*.{js,jsx,ts,tsx}\"",
 		"format": "prettier --write \"./packages/*/src/**/*.{js,jsx,ts,tsx}\"",
 		"build:lib-wasm": "cd packages/lib-wasm && wasm-pack build --release --target web --out-dir ../../target/wasm",
-		"rebuild-all": "cargo clean && run-s clean: && cargo build --release && run-s build:lib-wasm && yarn install && run-s build:",
+		"rebuild-all": "cargo clean && run-s clean && cargo build --release && run-s build:lib-wasm && yarn install && run-s build",
 		"git:precommit": "lint-staged"
 	},
 	"prettier": "@essex/prettier-config",
@@ -35,6 +35,7 @@
 	},
 	"workspaces": [
 		"packages/webapp",
+		"packages/components",
 		"target/wasm"
 	],
 	"packageManager": "yarn@3.2.0"
