--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -2,7 +2,16 @@
 	"name": "@sds/components",
 	"version": "0.0.1",
 	"description": "Components for SDS",
+	"type": "module",
 	"main": "./dist/index.js",
+	"module": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"exports": {
+		".": {
+			"import": "./dist/index.js"
+		},
+		"./package.json": "./package.json"
+	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"clean": "shx rm -rf ./dist",
