--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
-	"types": "./dist/index.d.ts",
+	"types": "./dist/types/index.d.ts",
 	"exports": {
 		".": {
 			"import": "./dist/index.js"
@@ -16,15 +16,26 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"clean": "shx rm -rf ./dist",
 		"build": "tsc",
-		"start": "run-s \"build --watch\""
+		"start": "run-s \"build --watch --preserveWatchOutput\""
 	},
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/mime": "^2.0.3",
 		"@types/node": "^17.0.34",
+		"@types/react": "^17",
 		"npm-run-all": "^4.1.5",
+		"react": "^17.0.2",
 		"shx": "^0.3.4",
 		"ts-node": "^10.7.0",
 		"typescript": "^4.6.4"
+	},
+	"peerDependencies": {
+		"react": "^17.0.2"
+	},
+	"dependencies": {
+		"@griffel/react": "^1.0.5",
+		"mime": "^3.0.0",
+		"react-dropzone": "^14.2.1"
 	}
 }
