--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,8 @@
 	},
 	"[rust]": {
 		"editor.defaultFormatter": "rust-lang.rust-analyzer"
+	},
+	"[python]": {
+		"editor.defaultFormatter": "ms-python.python"
 	}
 }
