updating lib_wasm_build ci

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -67,7 +67,4 @@ jobs:
 
       - name: Run wasm-pack build
         working-directory: ./packages/lib-wasm
-        run: |
-          ls . &&
-          cat Cargo.toml &&
-          wasm-pack build --release --target web --out-dir ../../target/wasm
+        run: wasm-pack build --release --target web --out-dir ${{ github.workspace }}/target/wasm
