updating rust ci to run on main and dev branches

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -2,9 +2,9 @@ name: Rust CI
 
 on:
   push:
-    branches: ['rust-ci']
+    branches: ['dev', 'main']
   pull_request:
-    branches: ['rust-ci']
+    branches: ['dev', 'main']
 
 env:
   CARGO_TERM_COLOR: always
