--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -2,7 +2,7 @@ name: Rust CI
 
 on:
   push:
-    branches: ['dev', 'main']
+    branches: ['main']
   pull_request:
     branches: ['dev', 'main']
 
