--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
 	"scripts": {
 		"postinstall": "husky install",
 		"clean": "yarn workspaces foreach -pv run clean",
+		"test": "yarn workspaces foreach -Apiv run test",
 		"build": "yarn workspaces foreach -ivt run build",
 		"start": "yarn workspaces foreach -piv run start",
 		"lint:check": "eslint \"./packages/*/src/**/*.{js,jsx,ts,tsx}\"",
 		"lint": "eslint --fix \"./packages/*/src/**/*.{js,jsx,ts,tsx}\"",
 		"format:check": "prettier --check \"./packages/*/src/**/*.{js,jsx,ts,tsx}\"",
 		"format": "prettier --write \"./packages/*/src/**/*.{js,jsx,ts,tsx}\"",
-		"build:lib-wasm": "cd packages/lib-wasm && wasm-pack build --release --target web --out-dir ../../target/wasm",
+		"build:lib-wasm": "cd packages/lib-wasm && wasm-pack build --release --target web --out-dir ../../target/wasm && replace \"sds-wasm\" \"@essex/sds-core\" ../../target/wasm/package.json",
 		"rebuild-all": "cargo clean && run-s clean && cargo build --release && run-s build:lib-wasm && yarn install && run-s build",
-		"git:precommit": "lint-staged"
+		"git:precommit": "lint-staged",
+		"git:ci": "run-s format:check lint:check test build",
+		"release:wasm": "npm-publish --access public --token ${NPM_TOKEN} ./target/wasm/package.json",
+		"release": "run-p release:wasm"
 	},
 	"prettier": "@essex/prettier-config",
 	"devDependencies": {
@@ -22,6 +26,7 @@
 		"@essex/jest-config": "^21.0.10",
 		"@essex/prettier-config": "^18.0.2",
 		"@essex/scripts": "^22.0.1",
+		"@jsdevtools/npm-publish": "^1.4.3",
 		"@types/eslint": "^8.4.2",
 		"@types/prettier": "^2.6.0",
 		"@typescript-eslint/eslint-plugin": "^5.22.0",
@@ -30,7 +35,9 @@
 		"eslint-import-resolver-node": "^0.3.6",
 		"husky": "^7.0.4",
 		"lint-staged": "^12.4.1",
+		"npm-run-all": "^4.1.5",
 		"prettier": "^2.6.2",
+		"replace": "^1.2.1",
 		"typescript": "^4.6.4"
 	},
 	"workspaces": [
