--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "webapp",
 	"version": "1.6.1",
+	"private": true,
 	"license": "MIT",
 	"main": "src/index.ts",
 	"publishConfig": {
@@ -20,6 +21,7 @@
 		"@data-wrangling-components/utilities": "^1.8.2",
 		"@essex/arquero": "^2.0.1",
 		"@essex/arquero-react": "^1.0.4",
+		"@essex/sds-core": "workspace:^",
 		"@fluentui/font-icons-mdl2": "^8.2.5",
 		"@fluentui/react": "^8.62.1",
 		"@fluentui/react-hooks": "^8.5.3",
@@ -48,7 +50,6 @@
 		"react-is": "17.0.2",
 		"react-router-dom": "^6.2.2",
 		"recoil": "^0.6.1",
-		"sds-wasm": "workspace:^",
 		"styled-components": "^5.3.3",
 		"uuid": "^8.3.2",
 		"yup": "^0.32.11"
