--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -4,15 +4,13 @@
 		"outDir": "./dist",
 		"declaration": true,
 		"declarationDir": "./dist/types",
-		"target": "ES2020" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-		"lib": [
-			"ES2020"
-		] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
-		"jsx": "react" /* Specify what JSX code is generated. */,
-		"module": "ES2020" /* Specify what module code is generated. */,
-		"forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
-		"strict": true /* Enable all strict type-checking options. */,
-		"skipLibCheck": true /* Skip type checking all .d.ts files. */,
+		"target": "ES2020",
+		"lib": ["ES2020"],
+		"jsx": "react",
+		"module": "ES2020",
+		"forceConsistentCasingInFileNames": true,
+		"strict": true,
+		"skipLibCheck": true,
 		"noErrorTruncation": true,
 		"esModuleInterop": true,
 		"moduleResolution": "node"
