--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -19,58 +19,54 @@
 		"@data-wrangling-components/core": "^6.1.0",
 		"@data-wrangling-components/react": "^5.1.3",
 		"@data-wrangling-components/utilities": "^1.8.2",
-		"@essex/arquero": "^2.0.1",
-		"@essex/arquero-react": "^1.0.4",
+		"@essex/arquero": "^2.0.3",
+		"@essex/arquero-react": "^1.1.0",
 		"@essex/sds-core": "workspace:^",
-		"@fluentui/font-icons-mdl2": "^8.2.5",
-		"@fluentui/react": "^8.62.1",
-		"@fluentui/react-hooks": "^8.5.3",
-		"@fluentui/utilities": "^8.8.1",
+		"@fluentui/font-icons-mdl2": "^8.4.1",
+		"@fluentui/react": "^8.77.0",
+		"@fluentui/react-hooks": "^8.6.0",
+		"@fluentui/utilities": "^8.8.3",
 		"@sds/components": "workspace:^",
-		"@thematic/core": "^2.0.6",
-		"@thematic/d3": "^2.0.6",
-		"@thematic/fluent": "^3.0.6",
-		"@thematic/react": "^2.0.6",
+		"@thematic/core": "^2.1.2",
+		"@thematic/d3": "^2.0.10",
+		"@thematic/fluent": "^3.1.0",
+		"@thematic/react": "^2.0.10",
 		"@types/mime": "^2.0.3",
-		"@uifabric/icons": "7.6.2",
-		"arquero": "^4.8.8",
-		"chart.js": "^3.7.1",
+		"@uifabric/icons": "7.7.2",
+		"arquero": "^5.0.0",
+		"chart.js": "^3.8.0",
 		"chartjs-plugin-datalabels": "^2.0.0",
 		"comlink": "^4.3.1",
-		"dompurify": "^2.3.6",
+		"dompurify": "^2.3.8",
 		"formik": "^2.2.9",
 		"lodash": "^4.17.21",
-		"marked": "^4.0.12",
+		"marked": "^4.0.17",
 		"mime": "^3.0.0",
-		"papaparse": "^5.3.1",
 		"react": "^17.0.2",
-		"react-chartjs-2": "^4.0.1",
+		"react-chartjs-2": "^4.2.0",
 		"react-dom": "^17.0.2",
-		"react-dropzone": "^12.0.4",
-		"react-is": "17.0.2",
-		"react-router-dom": "^6.2.2",
-		"recoil": "^0.6.1",
-		"styled-components": "^5.3.3",
+		"react-is": "^17.0.2",
+		"react-router-dom": "^6.3.0",
+		"recoil": "^0.7.3",
+		"styled-components": "^5.3.5",
 		"uuid": "^8.3.2",
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
 		"@types/dompurify": "^2.3.3",
-		"@types/lodash": "^4.14.178",
-		"@types/marked": "^4.0.2",
-		"@types/node": "^16.0.0",
-		"@types/papaparse": "^5.3.2",
-		"@types/react": "^17.0.38",
-		"@types/react-dom": "^17.0.11",
+		"@types/lodash": "^4.14.182",
+		"@types/marked": "^4.0.3",
+		"@types/node": "^16.11.41",
+		"@types/react": "^17.0.47",
+		"@types/react-dom": "^17.0.17",
 		"@types/react-is": "^17.0.3",
 		"@types/recoil": "^0.0.9",
-		"@types/styled-components": "^5.1.21",
+		"@types/styled-components": "^5.1.25",
 		"@types/uuid": "^8.3.4",
-		"@types/yup": "^0.29.13",
 		"@vitejs/plugin-react": "^1.3.2",
-		"ts-node": "^10.7.0",
-		"typescript": "^4.6.4",
-		"vite": "^2.9.9",
-		"vite-tsconfig-paths": "^3.4.1"
+		"ts-node": "^10.8.1",
+		"typescript": "^4.7.4",
+		"vite": "^2.9.12",
+		"vite-tsconfig-paths": "^3.5.0"
 	}
 }
