creating base sdssynth lib and aggregate seeded parameters builder

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ members = [
 	"packages/core",
 	"packages/cli",
 	"packages/lib-wasm",
-	"packages/lib-python"
+	"packages/lib-python",
+	"packages/lib-sdssynth"
 ]
 
 [profile.release]
