--- a/packages/lib-accusynth/Cargo.toml
+++ b/packages/lib-accusynth/Cargo.toml
@@ -12,7 +12,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 log = { version = "0.4", features = ["std"] }
-pyo3 = { version = "0.16", features = ["extension-module"] }
+pyo3 = { version = "0.16", features = ["extension-module", "abi3-py37"] }
 sds-core = { path = "../core", features = ["pyo3", "rayon"] }
 serde = { version = "1.0", features = [ "derive", "rc" ] }
 serde_json = { version = "1.0" }
