--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
 	"packages/cli",
 	"packages/lib-wasm",
 	"packages/lib-python",
-	"packages/lib-accusynth"
+	"packages/lib-pacsynth"
 ]
 
 [profile.release]
