--- a/packages/lib-pacsynth/Cargo.toml
+++ b/packages/lib-pacsynth/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "accu-synth"
+name = "pac-synth"
 version = "0.0.1"
 license = "MIT"
 description = "Synthetic Sata Showcase Synthesizers"
@@ -7,7 +7,7 @@ repository = "https://github.com/microsoft/synthetic-data-showcase"
 edition = "2021"
 
 [lib]
-name = "accusynth"
+name = "pacsynth"
 crate-type = ["cdylib"]
 
 [dependencies]
