--- a/.github/workflows/python-ci.yaml
+++ b/.github/workflows/python-ci.yaml
@@ -13,10 +13,10 @@ env:
 
 jobs:
   lib_pacsynth_build_win_mac:
-    name: Build lib-pacsynth Windows/MacOS
+    name: Build lib-pacsynth ${{ matrix.platform }}
     strategy:
       matrix:
-        platform: [windows-latest, macos-latest]
+        platform: [windows-latest]
         python-version: ["3.10"]
     runs-on: ${{ matrix.platform }}
 
@@ -30,15 +30,13 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
-        working-directory: ./packages/lib-pacsynth
-        run: pip install -r requirements.txt
+        run: pip install -r packages/lib-pacsynth/requirements.txt
 
       - name: Run lib-pacsynth build
-        working-directory: ./packages/lib-pacsynth
-        run: maturin build --release -o dist --universal2
+        run: maturin build -m packages/lib-pacsynth/Cargo.toml --release --universal2 -o dist
 
       - name: Upload wheels
         uses: actions/upload-artifact@v2
         with:
           name: wheels
-          path: packages/lib-pacsynth/dist
+          path: dist
