--- a/.github/workflows/python-ci.yaml
+++ b/.github/workflows/python-ci.yaml
@@ -16,7 +16,7 @@ jobs:
     name: Build lib-pacsynth ${{ matrix.platform }}
     strategy:
       matrix:
-        platform: [windows-latest]
+        platform: [macos-latest]
         python-version: ["3.10"]
     runs-on: ${{ matrix.platform }}
 
