--- a/.github/workflows/python-ci.yaml
+++ b/.github/workflows/python-ci.yaml
@@ -32,8 +32,17 @@ jobs:
       - name: Install dependencies
         run: pip install -r packages/lib-pacsynth/requirements.txt
 
-      - name: Run lib-pacsynth build
+      - name: Adding aarch64 target if MacOS
+        if: ${{ matrix.platform == 'macos-latest' }}
+        run: rustup target add aarch64-apple-darwin
+
+      - name: Run lib-pacsynth build MacOS
+        if: ${{ matrix.platform == 'macos-latest' }}
         run: maturin build -m packages/lib-pacsynth/Cargo.toml --release --universal2 -o dist
+
+      - name: Run lib-pacsynth build Windows
+        if: ${{ matrix.platform == 'windows-latest' }}
+        run: maturin build -m packages/lib-pacsynth/Cargo.toml --release -o dist
 
       - name: Upload wheels
         uses: actions/upload-artifact@v2
