--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -49,10 +49,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Run cargo clippy
-      - if: ${{ matrix.platform == 'windows-latest' }}
+      - name: Run cargo clippy Windows
+        if: ${{ matrix.platform == 'windows-latest' }}
         run: cargo clippy -- -D warnings -A clippy::borrow_deref_ref
-      - if: ${{ matrix.platform == 'ubuntu-latest' }}
+
+      - name: Run cargo clippy Linux
+        if: ${{ matrix.platform == 'ubuntu-latest' }}
         run: cargo clippy -- -D warnings
 
   cargo_test:
