--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Run cargo clippy Windows
         if: ${{ matrix.platform == 'windows-latest' }}
-        run: cargo clippy -- -D warnings -A clippy::borrow_deref_ref
+        run: cargo clippy -- -D warnings
 
       - name: Run cargo clippy Linux
         if: ${{ matrix.platform == 'ubuntu-latest' }}
