--- a/package.json
+++ b/package.json
@@ -28,11 +28,18 @@
 		"@essex/scripts": "^22.0.5",
 		"@jsdevtools/npm-publish": "^1.4.3",
 		"@types/eslint": "^8.4.5",
-		"@types/prettier": "^2.6.4",
-		"@typescript-eslint/eslint-plugin": "^5.32.0",
-		"@typescript-eslint/parser": "^5.32.0",
-		"eslint": "^8.18.0",
+		"@types/prettier": "^2.7.0",
+		"@typescript-eslint/eslint-plugin": "^5.33.1",
+		"@typescript-eslint/parser": "^5.33.1",
+		"eslint": "^8.22.0",
 		"eslint-import-resolver-node": "^0.3.6",
+		"eslint-plugin-header": "^3.1.1",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jest": "^26.8.3",
+		"eslint-plugin-jsx-a11y": "^6.6.1",
+		"eslint-plugin-react": "^7.30.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"husky": "^8.0.1",
 		"lint-staged": "^13.0.3",
 		"npm-run-all": "^4.1.5",
@@ -45,5 +52,5 @@
 		"packages/components",
 		"target/wasm"
 	],
-	"packageManager": "yarn@3.2.0"
+	"packageManager": "yarn@3.2.2"
 }
