temporally allow clippy::borrow_deref_ref for ubuntu clippy until next rust release

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Run cargo clippy Linux
         if: ${{ matrix.platform == 'ubuntu-latest' }}
-        run: cargo clippy -- -D warnings
+        run: cargo clippy -- -D warnings -A clippy::borrow_deref_ref
 
   cargo_test:
     name: Run cargo tests
