--- a/.github/workflows/javascript-ci.yml
+++ b/.github/workflows/javascript-ci.yml
@@ -2,9 +2,9 @@ name: Javascript CI
 
 on:
   push:
-    branches: ["main"]
+    branches: ['main', 'policy-link-updates']
   pull_request:
-    branches: ["dev", "main"]
+    branches: ['dev', 'main']
 
 env:
   CARGO_TERM_COLOR: always
@@ -58,7 +58,7 @@ jobs:
         run: yarn release
 
       - name: Deploy site
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/policy-link-updates' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
