--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -2,9 +2,9 @@ name: Rust CI
 
 on:
   push:
-    branches: ["main"]
+    branches: ['main']
   pull_request:
-    branches: ["dev", "main"]
+    branches: ['dev', 'main']
 
 env:
   CARGO_TERM_COLOR: always
@@ -50,7 +50,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run cargo clippy
-        run: cargo clippy -- -D warnings
+        # add "-D warning" so clippy warnings will result in pipeline failures
+        run: cargo clippy --
 
   cargo_test:
     name: Run cargo tests
@@ -71,7 +72,7 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-latest, windows-latest]
-        python-version: ["3.10"]
+        python-version: ['3.10']
     runs-on: ${{ matrix.platform }}
 
     steps:
