implement default traits

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,5 @@
 	"[python]": {
 		"editor.defaultFormatter": "ms-python.python"
 	},
-	"cSpell.enabled": true
+	"rust-analyzer.check.command": "clippy"
 }
