--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -50,8 +50,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run cargo clippy
-        # add "-D warning" so clippy warnings will result in pipeline failures
-        run: cargo clippy --
+        run: cargo clippy -- -D warnings
 
   cargo_test:
     name: Run cargo tests
