--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -22,10 +22,10 @@
 		"@essex/arquero": "^2.0.3",
 		"@essex/arquero-react": "^1.1.0",
 		"@essex/sds-core": "workspace:^",
-		"@fluentui/font-icons-mdl2": "^8.5.4",
-		"@fluentui/react": "^8.103.9",
-		"@fluentui/react-hooks": "^8.6.14",
-		"@fluentui/utilities": "^8.13.4",
+		"@fluentui/font-icons-mdl2": "^8.5.12",
+		"@fluentui/react": "^8.106.6",
+		"@fluentui/react-hooks": "^8.6.19",
+		"@fluentui/utilities": "^8.13.8",
 		"@sds/components": "workspace:^",
 		"@thematic/core": "^3.1.0",
 		"@thematic/d3": "^2.0.13",
@@ -36,37 +36,36 @@
 		"arquero": "^5.1.0",
 		"chart.js": "^3.9.1",
 		"chartjs-plugin-datalabels": "^2.2.0",
-		"comlink": "^4.3.1",
-		"dompurify": "^2.4.1",
+		"comlink": "^4.4.1",
+		"dompurify": "^3.0.1",
 		"formik": "^2.2.9",
 		"lodash": "^4.17.21",
-		"marked": "^4.2.4",
+		"marked": "^4.2.12",
 		"mime": "^3.0.0",
 		"react": "^17.0.2",
 		"react-chartjs-2": "^4.3.1",
 		"react-dom": "^17.0.2",
 		"react-is": "^17.0.2",
-		"react-router-dom": "^6.4.5",
-		"recoil": "^0.7.6",
-		"styled-components": "^5.3.6",
-		"uuid": "^9.0.0",
-		"yup": "^0.32.11"
+		"react-router-dom": "^6.9.0",
+		"recoil": "^0.7.7",
+		"styled-components": "^5.3.9",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
-		"@types/dompurify": "^2.4.0",
+		"@types/dompurify": "^3.0.0",
 		"@types/lodash": "^4.14.191",
 		"@types/marked": "^4.0.8",
-		"@types/node": "^16.18.9",
-		"@types/react": "^17.0.52",
-		"@types/react-dom": "^17.0.18",
+		"@types/node": "^16.18.16",
+		"@types/react": "^17.0.53",
+		"@types/react-dom": "^17.0.19",
 		"@types/react-is": "^17.0.3",
 		"@types/recoil": "^0.0.9",
 		"@types/styled-components": "^5.1.26",
-		"@types/uuid": "^9.0.0",
-		"@vitejs/plugin-react": "^3.0.0",
+		"@types/uuid": "^9.0.1",
+		"@vitejs/plugin-react": "^3.1.0",
 		"ts-node": "^10.9.1",
-		"typescript": "^4.8.4",
-		"vite": "^4.0.1",
-		"vite-tsconfig-paths": "^4.0.3"
+		"typescript": "^4.9.5",
+		"vite": "^4.2.0",
+		"vite-tsconfig-paths": "^4.0.7"
 	}
 }
