--- a/.github/workflows/javascript-ci.yml
+++ b/.github/workflows/javascript-ci.yml
@@ -2,9 +2,12 @@ name: Javascript CI
 
 on:
   push:
-    branches: ["main"]
+    branches: ['main']
   pull_request:
-    branches: ["dev", "main"]
+    branches: ['dev', 'main']
+
+permissions:
+  contents: write
 
 env:
   CARGO_TERM_COLOR: always
